Update for Java 9.